--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity"
+            android:configChanges="screenSize|keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--报表-->
+        <activity android:name=".activity.HomeReportActivity"
+            android:configChanges="screenSize|keyboardHidden|orientation"/>
+        <!--重点人员-->
+        <activity android:name=".activity.KeypersonnelActivity"/>
     </application>
 
 </manifest>
