--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--报表-->
-        <activity android:name=".activity.HomeReportActivity"
+        <!--重点报表-->
+        <activity android:name=".activity.ZDActivity.HomeReportActivity"
             android:configChanges="screenSize|keyboardHidden|orientation"/>
         <!--重点人员-->
-        <activity android:name=".activity.KeypersonnelActivity"/>
+        <activity android:name=".activity.ZDActivity.KeypersonnelActivity"/>
         <!--重点详情-->
-        <activity android:name=".activity.KeypersonnelActivityDetalis"/>
+        <activity android:name=".activity.ZDActivity.KeypersonnelActivityDetalis"
+            android:launchMode="singleTop"/>
+        <!--涉毒-->
+        <activity android:name=".activity.BedrugActivity.BedActivity"/>
+        <!--涉毒详情-->
+        <activity android:name=".activity.BedrugActivity.BedActivitydetails"
+            android:launchMode="singleTop"/>
+        <!--涉毒报表-->
+        <activity android:name=".activity.BedrugActivity.BedReportActivity"/>
     </application>
 
 </manifest>
