--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,15 +17,26 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
+
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -36,14 +47,17 @@ dependencies {
     implementation 'de.greenrobot:eventbus:2.4.0'
     // 状态栏沉浸：https://github.com/gyf-dev/ImmersionBar
     implementation 'com.gyf.barlibrary:barlibrary:2.3.0'
-
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
-
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.wuxiaolong.pullloadmorerecyclerview:library:1.1.2'
 
+    implementation (name: 'toollibrary', ext: 'aar')
+    implementation 'com.squareup.okhttp3:okhttp:3.14.1'
+    implementation 'com.google.code.gson:gson:2.6.2'
+
+    implementation 'com.alibaba:fastjson:1.1.68.android'
 
 
 }
