--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zhhl.ducha">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".app.Applicton">
         <activity android:name=".activity.MainActivity"
             android:configChanges="screenSize|keyboardHidden|orientation">
             <intent-filter>
@@ -17,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--重点报表-->
+        <!--<activity android:name=".activity.MainActivity"/>-->
+        <!--报表-->
         <activity android:name=".activity.ZDActivity.HomeReportActivity"
             android:configChanges="screenSize|keyboardHidden|orientation"/>
         <!--重点人员-->
